--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -17,6 +17,7 @@
   <button (click) = "sortById()">Sort Guitars by <span>ID</span></button>
   <button (click) = "filterByTypeBass()">Filter Guitars by <span>TYPE bass</span></button>
   <button (click) = "filterByColorBlacks()">Filter Guitars by <span>color black</span></button>
+  <button (click) = "resetFilter()">Reset Filters</button>
 </div>
 
 <div class="container">
