--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -35,7 +35,7 @@
                 <p>has case{{guitar.hasCase}} </p>
                 <p>number of strings {{guitar.noOfStrings}} </p>
                 <p>color {{guitar.color}} </p>
-                <p>price {{guitar.price}} <span>&euro;</span> </p>
+                <p>price {{guitar.price}} <span>&euro;</span> {{guitar.priceRON}} RON </p>
               </h6>
             </li>
           </ul>
