--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,1 +1,55 @@
-<p>update works!</p>
+<div class="container">
+    <div class="row">
+        {{ guitar.brand }} sasasa
+        <div class='col-6 offset-3'>
+            <form #guitar_form = "ngForm" (ngSubmit) = "updateGuitar(guitar_form.value)">
+                <div class="for">
+                    <label for="brand">Brand</label>
+                    <input type="text" name="brand" class="form-control" ngModel>
+                </div>
+                <div>
+                    <label for="model">Model</label>
+                    <input type="text" name="model"  class="form-control" ngModel>
+                </div>
+                <div>
+                    <label for="color">Color</label>
+                    <input #guitar type="text" name="color"  class="form-control" ngModel>
+                </div>
+                <div>
+                    <label for="hasCase">Has Case</label>
+                    <select name="hasCase"  class="form-control" ngModel>
+                        <option value disabled>No option selected</option>
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="noOfStrings">Number of Strings</label>
+                    <input type="text" name="noOfStrings"  class="form-control" ngModel>
+                </div>
+                <div>
+                    <label for="price">Price</label>
+                    <input type="number" min="1" name="price"  class="form-control" ngModel>
+                </div>
+                <div>
+                    <label for="type">Type</label>
+                    <select name="hasCase"  class="form-control" ngModel>
+                        <option value disabled>No option selected</option>
+                        <option value="electric">Electric</option>
+                        <option value="classical">Classical</option>
+                        <option value="acoustic">Acoustic</option>
+                        <option value="bass">Bass</option>
+                        <option value="hollow">Hollow</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="img" >Image URL</label>
+                    <input type="text" name="img"  class="form-control" ngModel>
+                </div>
+                <div>
+                    <button type="submit" class='btn btn-primary'>Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
