--- a/src/app/hollow-body/hollow-body.component.html
+++ b/src/app/hollow-body/hollow-body.component.html
@@ -1,1 +1,27 @@
 <h1 style="text-align: center; font-size: 100px;">HOLLOW ROUTE</h1>
+
+
+
+<div class="container">
+    <div class="row">
+          <div class="col-1"></div>
+          <div class="col-10">
+            <ul *ngFor="let guitar of guitars">
+              <li id="guitarCard">
+        
+                <img src="{{guitar.img}}">
+                <h6>
+                  <p>{{guitar.brand}} </p>
+                  <p>guitar model {{guitar.model}} </p>
+                  <p>guitar type {{guitar.type}} </p>
+                  <p>has case{{guitar.hasCase}} </p>
+                  <p>number of strings {{guitar.noOfStrings}} </p>
+                  <p>color {{guitar.color}} </p>
+                  <p>price {{guitar.price}} <span>&euro;</span> </p>
+                </h6>
+              </li>
+            </ul>
+          </div>
+          <div class="col-3"></div>
+    </div>
+  </div>
