details route and mobile homepage resposive

--- a/src/app/admin-create/admin-create.component.html
+++ b/src/app/admin-create/admin-create.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div>
                     <label for="type">Type</label>
-                    <select name="hasCase"  class="form-control" ngModel>
+                    <select name="type"  class="form-control" ngModel>
                         <option value disabled>No option selected</option>
                         <option value="electric">Electric</option>
                         <option value="classical">Classical</option>
