--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,10 +12,15 @@
     <div class="col-4 centerAlign">
       <img [src]="silhouette1" id="silhouette1" class="flipped leftAlign" alt="">
     </div>
+    <h3 class="bigNoDspl">We are honored to present you some of the artists who had choosen Ibanez as their form of expression</h3>
 
   </div>
+
+  <!-- guitarist 1st row -->
+
+
   <div class="row " style="margin-bottom: 30px;">
-    <div class="col-3 align">
+    <div class="col-lg-3  col-xs-6 align" >
       <div style="display: block;">
         <h4>Steve Vai</h4>
         <h6>
@@ -24,7 +29,7 @@
       </div>
       <img [src]="steveVai" id="steveVai" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3  col-xs-6  align">
       <div style="display: block;">
         <h4>Joe Satriani</h4>
         <h6>
@@ -33,7 +38,7 @@
       </div>
       <img [src]="joeSatriani" id="joeSatriani" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6 align">
       <div style="display: block;">
         <h4>Kiko Loureiro</h4>
         <h6>
@@ -42,7 +47,7 @@
       </div>
       <img [src]="kikoLoureiro" id="kikoLoureiro" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6 align">
       <div style="display: block;">
         <h4>John Petrucci</h4>
         <h6>
@@ -53,8 +58,10 @@
 
     </div>
   </div>
+
+  <!-- guitarist 2nd row -->
   <div class="row">
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6  align">
       <div style="display: block;">
         <h4>Tosin Abasi</h4>
         <h6>
@@ -63,7 +70,7 @@
       </div>
       <img [src]="tosinAbasi" id="tosinAbasi" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6 align">
       <div style="display: block;">
         <h4>Paul Gilbert</h4>
         <h6>
@@ -73,7 +80,7 @@
 
       <img [src]="paulGilbert" id="paulGilbert" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6 align">
       <div style="display: block;">
         <h4>Nita Strauss</h4>
         <h6>
@@ -82,7 +89,7 @@
       </div>
       <img [src]="nitaStrauss" id="nitaStrauss" class="guitaristImg" alt="">
     </div>
-    <div class="col-3 align">
+    <div class="col-lg-3 col-xs-6 align">
       <div style="display: block;">
         <h4>Marty Friedman</h4>
         <h6>
@@ -99,8 +106,11 @@
       <img [src]="silhouette1" id="silhouette1" alt="">
     </div>
     <div class="col-4">
+ 
+      <!-- quotes -->
+
       <div class="row moreText">
-        <h3 style="text-align: center;">Here's some of the most intersting quotes of the Ibanez artists</h3>
+        <h3  style="text-align: center;">Here's some of the most intersting quotes of the Ibanez artists</h3>
       </div>
     </div>
     <div class="col-4 centerAlign">
@@ -159,26 +169,26 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4 align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+    <div class="col-lg-4 align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
       <h6>Musikmesse Frankfurt 26 feb 2021</h6>
     </div>
-    <div class="col-4 align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+    <div class="col-lg-4  align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
       <h6>NAMM NYC 12 apr 2021</h6>
     </div>
-    <div class="col-4 align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+    <div class="col-lg-4  align" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
       <h6>Palm New Dehli 3 jun 2021</h6>
     </div>
   </div>
   <div class="row ">
-    <div class="col-4 exibImgWrapper">
+    <div class="col-lg-4 col-xs-12 exibImgWrapper">
 
       <img [src]="musikmesse" id="musikmesse" class="exhibImg" alt="">
     </div>
-    <div class="col-4 exibImgWrapper">
+    <div class="col-lg-4 col-xs-12 exibImgWrapper">
 
       <img [src]="namm" id="namm" class="exhibImg" alt="">
     </div>
-    <div class="col-4 exibImgWrapper">
+    <div class="col-lg-4 col-xs-12 exibImgWrapper">
 
       <img [src]="palm" id="palm" class="exhibImg" alt="">
     </div>
