--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,11 +12,25 @@
 <body>
 
   <h2 style="display: flex; justify-content: center;">Sort guitars</h2>
+<!-- 
+  dropdown -->
+
+<div style=" margin: auto; width: 30%; border-radius: 15px; border: 3px solid rgb(79, 83, 70); padding: 10px;">
+  <h6>Sort by Color</h6>
+    <select [(ngModel)]="selectedGuitar" (ngModelChange) = 'onGuitarSelected($event)'>
+      <option *ngFor="let color of colors">
+        {{color}}
+      </option>
+    </select>
+</div>
+
+
+
 <div class="sortButtons">
   <button (click) = "sortByPrice()">Sort Guitars by <span>PRICE</span></button>
   <button (click) = "sortById()">Sort Guitars by <span>ID</span></button>
   <button (click) = "filterByTypeBass()">Filter Guitars by <span>TYPE bass</span></button>
-  <button (click) = "filterByColorBlacks()">Filter Guitars by <span>color black</span></button>
+  <!-- <button (click) = "filterByColorBlacks()">Filter Guitars by <span>color black</span></button> -->
   <button (click) = "resetFilter()">Reset Filters</button>
 </div>
 
@@ -26,7 +40,7 @@
         <div class="col-10">
           <ul *ngFor="let guitar of guitars">
             <li id="guitarCard">
-              <a routerLink="/details/{{guitar.id}}">
+              <a routerLink="/details/{{guitar.db_key}}">
               
       
               <img src="{{guitar.img}}">
@@ -41,7 +55,7 @@
               </h6>
             </a>
             </li>
-          </ul>
+          </ul> 
         </div>
         <div class="col-3"></div>
   </div>
