--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -80,11 +80,13 @@ nav {
 
 nav ul ul {
   display: none;
+  
 }
 
 
 nav ul .dropdown:hover ul {
   display: initial;
+  
   
 }
 
@@ -181,11 +183,23 @@ width: 27px;
 
   
 }
+
+#hot_deal_txt{
+ font-family: Georgia, 'Times New Roman', Times, serif;
+ font-weight: bold;
+}
 #hotDeal{
+  margin-left: 60px;
   padding: 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   animation: blinker 3s linear infinite;
+  margin-bottom: 30px;
   
+}
+
+#hot_deal_item_info{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
 }
 
 @keyframes blinker {
