--- a/src/app/electric/electric.component.html
+++ b/src/app/electric/electric.component.html
@@ -10,14 +10,15 @@
                 <img src="{{guitar.img}}">
                 <h6>
                   <p>{{guitar.brand}} </p>
-                  <p>guitar model {{guitar.model}} </p>
-                  <p>guitar type {{guitar.type}} </p>
-                  <p>has case{{guitar.hasCase}} </p>
-                  <p>number of strings {{guitar.noOfStrings}} </p>
-                  <p>color {{guitar.color}} </p>
-                  <p>price {{guitar.price}} <span>&euro;</span> </p>
+                  <p>Guitar model: {{guitar.model}} </p>
+                  <p>Guitar type: {{guitar.type}} </p>
+                  <p>Has case: {{guitar.hasCase}} </p>
+                  <p>Number of strings: {{guitar.noOfStrings}} </p>
+                  <p>Color: {{guitar.color}} </p>
+                  <p>Price: {{guitar.price}} <span>&euro;</span> </p>
                 </h6>
               </li>
+              <hr>
             </ul>
           </div>
           <div class="col-3"></div>
