--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -11,10 +11,31 @@
 p {
   margin: 0;
 }
+hr{
+  border: rgb(76, 78, 50) 1px solid;
+}
+li{
+  padding: 20px;
+}
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0px;
 }
+li:hover{
+  background-color:rgb(162, 167, 155);
+  border-radius: 20px;
+  
+  
+  
+  
+}
+.text_position{
+  display: flex;
+  justify-content: center;
+}
+
 
 body>div.container>div>div.col-10>ul {
   display: flex;
@@ -38,3 +59,27 @@ body>div.container>div>div.col-10>ul {
   border-radius: 5px;
 
 }
+
+li a{
+  color:  rgb(79, 83, 70);
+  
+}
+li a:hover{
+  color: aliceblue;
+  text-decoration: none;
+}
+.sort_options{
+  margin: auto; 
+  width: 30%; 
+  border-radius: 15px; 
+  border: 3px solid rgb(79, 83, 70); 
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.sort_options div{
+  margin: 20px;
+}
+
