--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -2,7 +2,7 @@
 <div *ngIf='guitar'>
 <div class="container" >
     <div class="row">
-        <div class="col-9" >
+        <div class="col-lg-9 col-xs-12" >
            
             
                    
@@ -14,7 +14,7 @@
                 
            
         </div>
-        <div class="col-3">
+        <div class="col-lg-3  col-xs-12 detailsInfo">
             <h6>
                 <p>{{guitar.brand}} </p>
                 <p>Model: {{guitar.model}} </p>
