--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -21,3 +21,15 @@ h5 span{
     justify-content:space-around;
    
 }
+
+@media only screen and (max-width: 376px) {
+    h5{
+        font-size: 20px;
+        text-indent: 30px;
+        padding-left: 0px;
+    }
+
+    .storePic{
+        margin-bottom: 20px;
+    }
+}
