--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,15 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
+        <div class="col-lg-2 "></div>
+        <div class="col-lg-8 col-xs-12">
             <h5>
                 <span>dynastring</span> company  started to present and sell the Ibanez guitars from early 80 and since then we provided the best counseling, 
                 sell and product return services therefore we achive to deliver the best experiences to our customers and clients. We're very 
                 happy to receive both your praise and your suggestions for improvement. Whether it's the management, the service department, the shipping department or the marketing department: we take your feedback seriously. 
             </h5>
         </div>
-        <div class="col-2"></div>
+        <div class="col-lg-2 "></div>
     </div>
 </div>
 
