--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -16,6 +16,7 @@ hr{
 }
 li{
   padding: 20px;
+  
 }
 
 ul {
@@ -37,7 +38,7 @@ li:hover{
 }
 
 
-body>div.container>div>div.col-10>ul {
+body>div.container>div>div.col-lg-10>ul {
   display: flex;
 
   justify-content: center;
@@ -81,5 +82,22 @@ li a:hover{
 
 .sort_options div{
   margin: 20px;
+}
+
+@media only screen and (max-width: 376px) {
+
+.guitarCard{
+  width: auto;
+}
+
+.guitarCard img{
+  width:300px;
+}
+.sort_options {
+  margin:auto;
+  width: 300px;
+}
+
+
 }
 
