--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -44,8 +44,8 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-1"></div>
-      <div class="col-10 ">
+      <div class="col-lg-1 "></div>
+      <div class="col-lg-10 col-xs-12 guitarCard">
         <div *ngIf='guitars.length == 0'>No matching guitars for selection</div>
         <ul *ngFor="let guitar of guitars">
           <li id="guitarCard">
@@ -65,7 +65,7 @@
           
         </ul>
       </div>
-      <div class="col-3"></div>
+      <div class="col-lg-1"></div>
     </div>
   </div>
 
