--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,16 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
   background-position: center; 
+  background-size: cover;
+ 
   
 }
+
+/* html { 
+  background: url("assets/images/musicsheet.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
 
